# rust-rfham

./: .gitignore  .tarpaulin.toml  404.html  Cargo.toml  README.md  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: gh-pages.yml
cli/: antenna.html  band-plan.html  call-sign.html  completions.html  config.html  externals.html  index.html
crates/: antennas.html  bands.html  cli.html  core.html  geo.html  index.html  itu.html  maidenhead.html  markdown.html  prelude.html
images/: bands-overview.plantuml  itu-overview.plantuml  overview.plantuml  skinparams.plantuml
references/: errors.html  index.html  schema.html  service-callsign.html  service-geoip.html  service-loggng.html  service-weather.html
rfham/: Cargo.toml  README.md
rfham-antennas/: Cargo.toml  README.md
rfham-antennas/src/: dipole.rs  dipoles.rs  lib.rs
rfham-bands/: Cargo.toml  README.md
rfham-bands/src/: lib.rs  uk_rsgb.rs  us_fcc.rs
rfham-cli/: Cargo.toml  README.md  ex.toml
rfham-cli/src/: error.rs  main.rs
rfham-cli/src/cli/: antennas.rs  bands.rs  callsign.rs  config.rs  mod.rs
rfham-cli/src/command/: antennas.rs  bands.rs  callsign.rs  completions.rs  config.rs  external.rs  mod.rs
rfham-cli/src/telemetry/: mod.rs
rfham-config/: Cargo.toml  README.md  rfham-config-schema.json
rfham-config/src/: equipment.rs  error.rs  fields.rs  fmt.rs  lib.rs  locations.rs  paths.rs  services.rs  stations.rs
rfham-core/: Cargo.toml  README.md
rfham-core/data/: country-codes-ordered.csv
rfham-core/src/: agencies.rs  agency.rs  callsign.rs  callsigns.rs  conversions.rs  countries.rs  country.rs  error.rs  fmt.rs  frequencies.rs  frequency.rs  id.rs  lib.rs  licenses.rs  names.rs  non_si.rs  power.rs
rfham-core/src/callsign/: mod.rs
rfham-geo/: Cargo.toml  README.md
rfham-geo/src/: error.rs  lib.rs
rfham-geo/src/geoip/: mod.rs
rfham-geo/src/geoip/providers/: local.rs  mod.rs
rfham-geo/src/grid/: maidenhead.rs  mod.rs
rfham-geo/tests/: test_maidenhead.rs
rfham-itu/: Cargo.toml  README.md
rfham-itu/data/: itu-prefix.csv
rfham-itu/src/: allocations.rs  bands.rs  callsigns.rs  lib.rs  regions.rs
rfham-maidenhead/: Cargo.toml  README.md
rfham-maidenhead/src/: lib.rs
rfham-maidenhead/tests/: test_maidenhead.rs
rfham-markdown/: Cargo.toml  README.md
rfham-markdown/src/: error.rs  lib.rs
rfham-radios/: Cargo.toml  README.md
rfham-radios/src/: known.rs  lib.rs
rfham-services/: Cargo.toml
rfham-services/src/: error.rs  lib.rs  space.rs  weather.rs
rfham-services/src/browser/: mod.rs
rfham-services/src/callsign/: mod.rs  qrz.rs
rfham-services/src/location/: geoip_lookup.rs  ipinfo.rs  mod.rs
rfham/src/: lib.rs
rust-rfham.github.io/: .gitignore  README.md  book.toml
rust-rfham.github.io/src/: SUMMARY.md  introduction.md
rust-rfham.github.io/src/cli/: antenna.md  band-plan.md  call-sign.md  completions.md  config.md  externals.md  index.md
rust-rfham.github.io/src/crates/: antennas.md  bands.md  cli.md  core.md  geo.md  index.md  itu.md  maidenhead.md  markdown.md  prelude.md
rust-rfham.github.io/src/images/: config-overview.plantuml  core-overview.plantuml  geo-overview.plantuml  itu-overview.plantuml  maidenhead-overview.plantuml  overview.plantuml
rust-rfham.github.io/src/references/: errors.md  index.md  service-callsign.md  service-geoip.md  service-loggng.md
rust-rfham.github.io/theme/: head.hbs
rustdoc/: header.html
