[package]
name = "rfham-antennas"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["colored"]
no-color = ["std", "colored/no-color"]


[dependencies]
rfham-bands = { version = "0.1", path = "../rfham-bands" }
rfham-core = { version = "0.1", path = "../rfham-core" }
rfham-itu = { version = "0.1", path = "../rfham-itu" }
rfham-markdown = { version = "0.1", path = "../rfham-markdown" }
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "f64",
    "serde",
    "si",
] }
colored = { version = "3.1", optional = true }

[lints]
workspace = true
