[package]
name = "rfham-bands"
version = "0.1.0"
edition = "2024"
description = "Data types to represent band plans."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://rfham.github.io"
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["std"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies.wasm-bindgen-test]
version = "0.3"


[features]
default = ["std"]
std = [
    "serde/std",
    "serde_json/std",
    "serde_with/std",
    "thiserror/std",
    "uom/std",
    "colored",
]
no-color = ["std", "colored/no-color"]

[dependencies]
colored = { version = "3.1", optional = true }
rfham-core = { version = "0.1", path = "../rfham-core" }
rfham-itu = { version = "0.1", path = "../rfham-itu" }
rfham-markdown = { version = "0.1", path = "../rfham-markdown" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.18", default-features = false, features = [
    "alloc",
    "macros",
] }
thiserror = { version = "2.0", default-features = false }
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "f64",
    "serde",
    "si",
] }

[lints]
workspace = true
