[package]
name = "rfham-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for accessing RF-Ham tools."
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[[bin]]
name = "rfham"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.6", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3", default-features = false, features = [
    "tracing",
] }
clap_complete = "4.6"
rfham-antennas = { version = "0.1", path = "../rfham-antennas" }
rfham-bands = { version = "0.1", path = "../rfham-bands" }
rfham-config = { version = "0.1", path = "../rfham-config" }
rfham-core = { version = "0.1", path = "../rfham-core" }
rfham-geo = { version = "0.1", path = "../rfham-geo" }
rfham-itu = { version = "0.1", path = "../rfham-itu" }
rfham-markdown = { version = "0.1", path = "../rfham-markdown" }
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
colorchoice-clap = "1.0.8"
colorchoice = "1.0.5"
colored = "3.1.1"
