[package]
name = "rfham-cli"
version = "0.1.1"
edition = "2024"
description = "CLI for accessing RF-Ham tools."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://simonkjohnston.life/rust-rfham"
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[[bin]]
name = "rfham"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
clap-verbosity-flag = { version = "3", default-features = false, features = [
    "tracing",
] }
colorchoice = "1.0"
colorchoice-clap = "1.0"
colored = "3.1"
icu_locale_core = { version = "2.2", features = ["alloc"] }
inquire = { version = "0.9", features = ["date"] }
rfham-antennas = { version = "0.1.1", path = "../rfham-antennas" }
rfham-bands = { version = "0.1.1", path = "../rfham-bands" }
rfham-config = { version = "0.1.1", path = "../rfham-config" }
rfham-core = { version = "0.1.1", path = "../rfham-core" }
rfham-geo = { version = "0.1.1", path = "../rfham-geo" }
rfham-itu = { version = "0.1.2", path = "../rfham-itu" }
rfham-maidenhead = { version = "0.1.0", path = "../rfham-maidenhead" }
rfham-markdown = { version = "0.1.1", path = "../rfham-markdown" }
rfham-services = { version = "0.1.0", path = "../rfham-services" }
search_path = "0.1"
strum = { version = "0.28", features = ["derive"] }
sys-locale = "0.3"
thiserror = { version = "2.0", default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
whoami = "2.1"
