[package]
name = "rfham-config"
version = "0.1.0"
edition = "2024"
description = "Shared configuration data for RF-Ham libraries and tools."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://rfham.github.io"
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "../README.md"
# Minimum Supported Rust Version
rust-version = "1.94"


[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies.wasm-bindgen-test]
version = "0.3"

[dependencies]
rfham-bands = { version = "0.1", path = "../rfham-bands" }
rfham-core = { version = "0.1", path = "../rfham-core" }
rfham-geo = { version = "0.1", path = "../rfham-geo" }
rfham-itu = { version = "0.1", path = "../rfham-itu" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_with = { version = "3.18", default-features = false, features = [
    "alloc",
    "macros",
] }
thiserror = { version = "2.0", default-features = false }
toml = "1.1"
tracing = "0.1"
xdirs = "0.1"

[lints]
workspace = true
