[package]
name = "rfham-core"
version = "0.1.1"
edition = "2024"
description = "Core data types for RF-Ham libraries."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://simonkjohnston.life/rust-rfham"
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["std"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies.wasm-bindgen-test]
version = "0.3"

[features]
default = ["std"]
std = [
    "num-rational/std",
    "num-traits/std",
    "regex/std",
    "serde/std",
    "serde_json/std",
    "serde_with/std",
    "thiserror/std",
    "uom/std",
]

[dependencies]
num-rational = { version = "0.4", default-features = false }
num-traits = { version = "0.2", default-features = false }
regex = { version = "1.12", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.18", default-features = false, features = [
    "alloc",
    "macros",
] }
thiserror = { version = "2.0", default-features = false }
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "f64",
    "serde",
    "si",
] }

[dev-dependencies]
pretty_assertions = "1.4"

[lints]
workspace = true
