[package]
name = "rfham-geo"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
lat-long = { version = "0.1", features = [
    "serde",
], path = "../../rust-lat-long/" }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
rfham-core = { version = "0.1", path = "../rfham-core" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_with = { version = "3.18", default-features = false, features = [
    "alloc",
    "macros",
] }
thiserror = { version = "2.0", default-features = false }
tracing = "0.1.44"
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "f64",
    "serde",
    "si",
] }

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = { version = "1.0" }

[lints]
workspace = true
