[package]
name = "rfham-markdown"
version = "0.1.0"
edition = "2024"
description = "Markdown writer (utility) for RF-Ham libraries."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://simonkjohnston.life/rust-rfham"
license = "MIT OR Apache-2.0"
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[package.metadata.docs.rs]
features = ["std"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["std"]

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies.wasm-bindgen-test]
version = "0.3"

[features]
default = ["std"]
std = ["colored"]
no-color = ["std", "colored/no-color"]

[dependencies]
colored = { version = "3.1", optional = true }
thiserror = { version = "2.0", default-features = false }

[lints]
workspace = true
