[package]
name = "rfham"
version = "0.1.0"
edition = "2024"
description = "Combined 'prelude'-like interface for rfham."
repository = "https://github.com/johnstonskj/rust-rfham"
homepage = "https://simonkjohnston.life/rust-rfham"
license = "MIT OR Apache-2.0"
keywords = ["ham", "radio"]
readme = "README.md"
# Minimum Supported Rust Version
rust-version = "1.94"

[dependencies]
rfham-antennas = { version = "0.1.1", path = "../rfham-antennas" }
rfham-bands = { version = "0.1.1", path = "../rfham-bands" }
rfham-config = { version = "0.1.1", path = "../rfham-config" }
rfham-core = { version = "0.1.1", path = "../rfham-core" }
rfham-geo = { version = "0.1.1", path = "../rfham-geo" }
rfham-itu = { version = "0.1.2", path = "../rfham-itu" }
rfham-maidenhead = { version = "0.1.0", path = "../rfham-maidenhead" }
rfham-markdown = { version = "0.1.1", path = "../rfham-markdown" }

[lints]
workspace = true
